crates/mdt_cli/tests/snapshots/snapshots__missing_provider_update_readme_md.snap
---
source: crates/mdt_cli/tests/snapshots.rs
expression: readme
---
# Missing Provider Test

<!-- {=nonexistent_block} -->

Content referencing a missing provider.

<!-- {/nonexistent_block} -->
