crates/mdt_cli/tests/snapshots/snapshots__multiple_providers_list.snap
---
source: crates/mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpJpHBH7
    - list
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Providers:
  @header template.t.md (2 consumer(s))
  @install template.t.md (2 consumer(s))
  @usage template.t.md (2 consumer(s))

Consumers:
  =header docs.md [linked]
  =install docs.md [linked]
  =usage docs.md [linked]
  =header readme.md [linked]
  =install readme.md [linked]
  =usage readme.md [linked]

3 provider(s), 6 consumer(s)

----- stderr -----
