crates/mdt_cli/tests/snapshots/snapshots__multiple_providers_update_docs_md.snap
---
source: crates/mdt_cli/tests/snapshots.rs
expression: docs
---
# Documentation

<!-- {=header} -->

# Project Title

A great project.

<!-- {/header} -->

## Getting Started

<!-- {=install} -->

```sh
npm install my-lib
```

<!-- {/install} -->

<!-- {=usage} -->

```ts
import { greet } from "my-lib";
greet("world");
```

<!-- {/usage} -->
