crates/mdt_cli/tests/snapshots/snapshots__orphan_consumer_check.snap
---
source: crates/mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmp7sZvr8
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
warning: consumer block `nonexistent` has no matching provider
Stale: block `greeting` in readme.md:3:1

1 consumer block(s) are out of date. Run `mdt update` to fix.
