crates/mdt_cli/tests/snapshots/snapshots__orphan_consumer_update.snap
---
source: crates/mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmprMSHQE
    - update
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Updated 1 block(s) in 1 file(s).

----- stderr -----
warning: consumer block `nonexistent` has no matching provider
